Update Minh Tri Hoang_R Code.ipynb

--- a/Minh Tri Hoang_R Code.ipynb
+++ b/Minh Tri Hoang_R Code.ipynb
@@ -6,89 +6,16 @@
    "metadata": {},
    "source": [
     "**R code for the Computational Statistics Project** (Summer Semester 2022) </br>\n",
-    "(Student: Minh Tri Hoang | M.Sc. Economics, University of Bonn | ID: 3291616) </br></br>\n",
+    "(Student: Minh Tri Hoang | M.Sc. Economics, University of Bonn) </br></br>\n",
     "Report on Alexandre Belloni, Victor Chernozhukov, Christian Hansen, **Inference on Treatment Effects after Selection among High-Dimensional Controls**, The Review of Economic Studies, Volume 81, Issue 2, April 2014, Pages 608–650"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a6b10df5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Attaching package: 'ggdag'\n",
-      "\n",
-      "\n",
-      "The following object is masked from 'package:stats':\n",
-      "\n",
-      "    filter\n",
-      "\n",
-      "\n",
-      "\n",
-      "Attaching package: 'dplyr'\n",
-      "\n",
-      "\n",
-      "The following object is masked from 'package:MASS':\n",
-      "\n",
-      "    select\n",
-      "\n",
-      "\n",
-      "The following objects are masked from 'package:stats':\n",
-      "\n",
-      "    filter, lag\n",
-      "\n",
-      "\n",
-      "The following objects are masked from 'package:base':\n",
-      "\n",
-      "    intersect, setdiff, setequal, union\n",
-      "\n",
-      "\n",
-      "\n",
-      "Attaching package: 'plm'\n",
-      "\n",
-      "\n",
-      "The following objects are masked from 'package:dplyr':\n",
-      "\n",
-      "    between, lag, lead\n",
-      "\n",
-      "\n",
-      "Loading required package: lattice\n",
-      "\n",
-      "Loading required package: survival\n",
-      "\n",
-      "Loading required package: Formula\n",
-      "\n",
-      "\n",
-      "Attaching package: 'Hmisc'\n",
-      "\n",
-      "\n",
-      "The following objects are masked from 'package:dplyr':\n",
-      "\n",
-      "    src, summarize\n",
-      "\n",
-      "\n",
-      "The following objects are masked from 'package:ggdag':\n",
-      "\n",
-      "    label, label<-\n",
-      "\n",
-      "\n",
-      "The following objects are masked from 'package:base':\n",
-      "\n",
-      "    format.pval, units\n",
-      "\n",
-      "\n",
-      "Loading required package: Matrix\n",
-      "\n",
-      "Loaded glmnet 4.1-4\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "options(warn = -1) # Turn off warnings in R Notebook\n",
     "library(MASS)\n",
